knnとの関連性の記述

--- a/series/13.md
+++ b/series/13.md
@@ -1,127 +1,335 @@
+
 # 第13回：高次元の深淵 ～幾何学的な恐怖と祝福～
 
 ## 注意事項
 
-- MoEの「各Expertが直交部分空間を担当」は理想化された仮説であり、実際の学習済みMoEで厳密に成り立つとは限らない。
+本講義で扱う内容には、確立された数学的事実と、研究途上の解釈が混在している。特に以下の点に留意されたい：
+
 - 「赤道集中現象」は高次元球面の数学的性質であり、条件なしに成り立つ。
-- 敵対的サンプルの幾何学的解釈は研究途上であり、確立された理論ではない。
+- MoEの「各Expertが直交部分空間を担当」は理想化された仮説であり、実際の学習済みMoEで厳密に成り立つとは限らない。
+- 敵対的サンプルやkNNの幾何学的解釈は研究途上であり、確立された理論ではない。
 
-## トピック
+---
 
-超高次元球面で何が起きているのか、そしてスパース性の活用
+## 導入：高次元という「異世界」
 
-## 内容
+私たちの直感は3次元空間で鍛えられてきた。しかし、現代の深層学習モデルが扱う表現空間は数百から数千次元に及ぶ。この「高次元」という異世界では、私たちの幾何学的直感はしばしば裏切られる。
 
-- **第2回の復習と深化:**
-    - 高次元では「ほぼ直交」「ほぼ等距離」
-    - これは表現力の源泉になりうる
-    - しかし同時に、予測不可能性の源にもなりうる
-- **次元の逆説（再訪）:**
-    - **赤道集中現象:** 高次元球面では「ほぼすべての点が赤道付近」
-    - 数学的に：高次元極限では直感に反する集中が起きる
-    - 直感：「極（北極・南極）にはほとんど誰もいない」
-- **裏道（ショートカット）の存在（比喩）:**
-    - 超高次元では、人間直感では追えない"近道"が存在しうる
-    - モデルはそれを発見し利用する可能性がある
-- **敵対的サンプル (Adversarial Examples) の幾何学:**
-    - 微小ノイズで誤分類が起きる
-    - 幾何学的理解（比喩）：決定境界近傍の"高次元の抜け道"
+第2回で「ノルムの呪い」として高次元の問題に触れた。本講義では、その議論をさらに深め、高次元空間の性質が**恐怖**（予測不可能性、敵対的サンプル）と**祝福**（表現力、スパース性の活用）の両面を持つことを見ていく。そして、この性質を積極的に活用するMixture of Experts（MoE）アーキテクチャへと議論を接続する。
 
-## 補論：スパース性の幾何学 ～Mixture of Expertsの世界～
+---
 
-高次元空間の「ほとんどが空」という性質は、呪いではなく**設計原理**として活用できる。2025年以降、大規模最先端LLMの主要アーキテクチャの一つとして台頭したMixture of Experts (MoE) は、この原理の実践例である。
+## 1. 高次元の二つの顔：第2回からの復習と深化
 
-※ただし、denseモデル（全パラメータを常時活性化）も依然として広く使用されており、MoEが「唯一の主流」というわけではない。用途・規模・計算資源に応じて使い分けられている。
+### 1.1 「ほぼ直交」という奇妙な世界
 
-- **MoEの基本構造:**
-    - 複数の「専門家」（Expert）ネットワークを用意
-    - 入力に応じて、一部の専門家だけを活性化（スパース活性化）
-    - **ルーター（Router）:** どの専門家を使うかを決定するゲート機構
+第2回で述べたように、高次元空間では以下の現象が起きる：
 
-- **幾何学的解釈:**
-    - **各Expertは「部分空間」を担当:**
-        - Expert 1: 数学的推論に強い部分空間
-        - Expert 2: 言語的ニュアンスに強い部分空間
-        - Expert 3: コード生成に強い部分空間
-        - …
-    - **ルーティング = 「どの部分空間に投影するか」の動的選択**
-    - 入力ベクトルと各Expert重心の角度（または内積）で決定されることが多い
+> 高次元空間でランダムに2つのベクトルを選ぶと、それらはほぼ確実に直交に近い。
 
-- **高次元直交性との接続（第2回の伏線回収）:**
-    - 高次元ではランダムベクトルはほぼ直交
-    - **良いMoEの仮説:** 各Expertが担当する部分空間は、互いにほぼ直交している
-    - これにより、Expert間の干渉が少なく、専門性が保たれる
-    - **経験的観察:** 学習が進むと、Expert間の類似度が下がる傾向
+これは数学的に証明できる事実である。$d$次元単位球面上で一様ランダムに選んだ2つのベクトル $\mathbf{u}, \mathbf{v}$ の内積 $\langle \mathbf{u}, \mathbf{v} \rangle$ は、$d \to \infty$ で平均0、分散 $1/d$ に集中する。
 
-- **スパース性の利点:**
-    - **計算効率:** 全パラメータを使わずに推論（例：8つのExpertのうち2つだけ活性化）
-    - **容量増大:** パラメータ数は増えるが、計算量は抑制
-    - **専門化:** 各Expertが特定のタスク/ドメインに特化
+この性質は**表現力の源泉**となる。なぜなら、互いにほぼ直交する多数のベクトルを「詰め込む」ことができるからだ。1000次元空間には、互いの内積が0.1以下である数万のベクトルを配置できる。これが、大規模言語モデルが膨大な語彙やコンセプトを区別できる理由の一つである。
 
-- **MoEの課題と幾何学的理解:**
-    - **Expert Collapse（専門家崩壊）:**
-        - 一部のExpertに負荷が集中し、他が使われなくなる
-        - **幾何学的解釈:** 部分空間が縮退し、次元崩壊の変種が起きる
-        - 対策：Load Balancing Loss（負荷分散損失）
-    - **Load Balancing Loss の幾何学:**
-        - 各Expertへのルーティング確率を均等化
-        - **幾何学的解釈:** 球面上の均等分布を促す正則化
-        - $\mathcal{L}_{\text{balance}} = \alpha \cdot n \cdot \sum_i f_i \cdot p_i$
-            - $f_i$ : Expert $i$ に割り当てられたトークンの割合
-            - $p_i$ : Expert $i$ へのルーティング確率の平均
-    - **Expert間の知識共有:**
-        - 完全に独立だと、共通知識が重複して非効率
-        - **Shared Expert:** 全入力に対して常に活性化するExpertを追加
-        - **幾何学的解釈:** 共通部分空間 + 専門部分空間の階層構造
+### 1.2 「ほぼ等距離」という落とし穴
 
-- **MoE と Multi-head Attention の対比:**
+しかし、同じ性質が**予測不可能性の源**にもなる。高次元では、ランダムな点同士の距離がほぼ等しくなる傾向がある。これを**距離の集中現象**（concentration of distances）と呼ぶ。
 
-    | 機構 | 分割の単位 | 選択方式 | 幾何学的解釈 |
-    | --- | --- | --- | --- |
-    | Multi-head Attention | 表現次元 | 常に全ヘッド | 部分空間への同時射影 |
-    | MoE | ネットワーク全体 | 動的に選択 | 部分空間への条件付き射影 |
+具体的には、$d$次元空間で原点からランダムな点への距離は、$d$が大きくなると相対的なばらつきが減少する：
 
-- **最新動向（2024-2025年）:** ※2026年2月時点の代表例
+$$\frac{\text{標準偏差}}{\text{平均}} \propto \frac{1}{\sqrt{d}} \to 0 \quad (d \to \infty)$$
 
-    以下は急速に発展中の分野であり、状況は変化しうる点に留意されたい。
+直感的に言えば、高次元では「近い」と「遠い」の区別が曖昧になる。この現象は、後述するkNNの破綻と敵対的サンプルの存在に深く関わる。
 
-    - **Mixed-Curvature Decision Trees / Random Forests** (ICML 2025): 混合曲率（混ぜる幾何）の具体例
-    - **Hyperbolic LLMs** (2025): 双曲空間でのLLM表現学習
-    - **HypLoRA** (Yang et al., 2024): 双曲多様体でのLoRA適用、AQuAベンチマークで最大13.0%向上（複雑な推論タスクに有効）
-    - **Hyperbolic Vision Transformers (HVT)** (Fein-Ashley et al., 2024): ポアンカレ球モデルでのViT
-    - **Spectro-Riemannian GNNs** (ICLR 2025): 異なる曲率を組み合わせたグラフニューラルネット
-    - **Mixtral** (Mistral AI): 8 Experts, Top-2 routing
-    - **Switch Transformer** (Google): Top-1 routing でさらにスパース化
-    - **DeepSeek-MoE / DeepSeek-V3**: 細粒度Expert + 共有Expert、コスト効率の高いスケーリング
-    - **Soft MoE**: 離散的ルーティングを連続化（第4回補論との接続！）
-    - **Llama 4**: MoEを採用（ただしLlama 3はdense）
-    - ※MoE vs Denseの選択は、モデル規模・用途・推論環境により異なる
+---
 
-## アライメント問題の幾何学的定式化（比喩）
+## 2. 赤道集中現象：高次元球面の奇妙な地理
 
-- **人間の「望ましい多様体」:** 倫理的制約を満たす部分
-- **AIの「効率的な多様体」:** 目的関数を最小化する部分
-- 問題：高次元で乖離しうる
-- **MoEとの接続:** 「倫理Expert」を明示的に設けることは可能か？
+### 2.1 「ほぼすべての点が赤道付近」
 
-## 未解決問題
+高次元球面には、直感に反する性質がある。北極を一点固定したとき、球面上のほぼすべての点は「赤道付近」に存在する。
 
-- 高次元多様体の「全体像」を人間は理解できるのか？
-- 説明可能性とは幾何学的に何を意味するのか？
-- MoEの各Expertは「何を学んだか」を解釈できるのか？
+これを数学的に述べよう。$d$次元単位球面 $S^{d-1}$ 上で一様分布に従う点を取り、北極（例えば $(1, 0, \ldots, 0)$）との角度を $\theta$ とする。このとき、$\theta$ の分布は $d$ が大きくなると $\pi/2$（赤道）に集中する。
+
+$$\mathbb{E}[\theta] \to \frac{\pi}{2}, \quad \text{Var}[\theta] \to 0 \quad (d \to \infty)$$
+
+### 2.2 直感的理解
+
+なぜこのようなことが起きるのか。球面上の「帯」の面積を考えてみよう。赤道付近の帯は、極付近の帯よりも圧倒的に広い。高次元ではこの差が指数的に拡大し、結果として「ほぼすべての面積が赤道付近」に集中する。
+
+この現象は、第3回で導入した「プラネタリウム」（球面上の表現空間）の設計において重要な含意を持つ。球面上で「均等に」点を配置しようとしても、高次元では自然と赤道付近に集中してしまう。これは意図的な設計なしには避けられない。
+
+---
+
+## 3. kNNの幾何学：高次元での破綻と復活
+
+### 3.1 k近傍法の基本
+
+k近傍法（k-Nearest Neighbors, kNN）は、最も直感的な機械学習アルゴリズムの一つである。クエリ点に最も近いk個の訓練データを見つけ、その多数決（分類）または平均（回帰）で予測を行う。
+
+この単純さゆえに、kNNは高次元の問題を如実に浮かび上がらせる。
+
+### 3.2 高次元でのkNNの破綻
+
+距離の集中現象により、高次元ではkNNが本質的に困難になる。最近傍と最遠傍の距離比を考えよう：
+
+$$\frac{d_{\max} - d_{\min}}{d_{\min}} \to 0 \quad (d \to \infty)$$
+
+これは、「最も近い点」と「最も遠い点」の区別がつかなくなることを意味する。kNNの根幹である「近さ」の概念が崩壊するのだ。
+
+### 3.3 角度による救済：第3回との接続
+
+ここで第3回「プラネタリウムの建設」が活きてくる。ユークリッド距離の代わりに**コサイン類似度**（角度）を使うことで、高次元でもkNNは機能しうる。
+
+なぜか。正規化されたベクトル（単位球面上の点）間のコサイン類似度は、内積そのものである：
+
+$$\text{cos\_sim}(\mathbf{u}, \mathbf{v}) = \frac{\mathbf{u} \cdot \mathbf{v}}{\|\mathbf{u}\| \|\mathbf{v}\|} = \mathbf{u} \cdot \mathbf{v} \quad (\|\mathbf{u}\| = \|\mathbf{v}\| = 1)$$
+
+高次元でランダムベクトルがほぼ直交する（内積≈0）一方で、**意味的に関連するベクトルは非ランダムな構造を持つ**。この構造が、角度ベースの類似度で捉えられる。
+
+### 3.4 近似最近傍探索（ANN）とスパース性の活用
+
+厳密なkNNは計算量が $O(nd)$（$n$: データ数、$d$: 次元数）であり、大規模データには適用困難である。ここで**近似最近傍探索**（Approximate Nearest Neighbor, ANN）が登場する。
+
+代表的な手法とその幾何学的アイデアを整理しよう：
+
+| 手法 | 幾何学的アイデア |
+|------|------------------|
+| **LSH** (Locality Sensitive Hashing) | ランダム超平面で空間を分割し、近い点が同じバケットに入る確率を高める |
+| **Product Quantization** | 高次元空間を低次元部分空間の直積に分解し、各部分空間で量子化 |
+| **HNSW** (Hierarchical Navigable Small World) | 階層的なグラフ構造で「近道」を作り、効率的に探索 |
+
+特に**Product Quantization**は、MoEの部分空間分割と構造的に類似している。高次元ベクトルを複数の部分空間に分割し、各部分空間で独立に処理するというアイデアは、後述するMoEの「Expert = 部分空間」という解釈と共鳴する。
+
+### 3.5 RAGとの接続：埋め込み空間でのkNN
+
+Retrieval-Augmented Generation（RAG）は、大規模言語モデルの知識を外部データベースで補強する手法である。その中核は、クエリの埋め込みベクトルに対するkNN検索（意味的に近い文書の検索）にある。
+
+RAGが機能するのは、埋め込み空間が「意味的な近さ = 幾何学的な近さ（角度）」という構造を持つよう学習されているからだ。これは偶然ではなく、対照学習（Contrastive Learning）によって意図的に設計された構造である。
+
+---
+
+## 4. 敵対的サンプルの幾何学：高次元の「抜け道」
+
+### 4.1 微小ノイズで誤分類が起きる
+
+敵対的サンプル（Adversarial Examples）は、深層学習の脆弱性を示す現象である。人間には知覚できないほど微小なノイズを加えるだけで、モデルの予測が大きく変わる。
+
+$$\mathbf{x}_{\text{adv}} = \mathbf{x} + \epsilon \cdot \text{sign}(\nabla_{\mathbf{x}} \mathcal{L})$$
+
+ここで $\epsilon$ は微小な摂動の大きさ、$\nabla_{\mathbf{x}} \mathcal{L}$ は損失関数の入力に関する勾配である。
+
+### 4.2 幾何学的解釈（比喩）
+
+敵対的サンプルの存在は、高次元空間の幾何学と深く関わっている可能性がある。以下は確立された理論ではなく、研究途上の解釈である。
+
+**決定境界近傍の「抜け道」仮説：** 高次元空間では、決定境界（異なるクラスを分ける超曲面）が非常に複雑な形状を持ちうる。人間の直感では追えない「近道」や「抜け穴」が存在し、微小な移動でも境界を越えてしまう。
+
+**次元の多さと「逃げ道」：** 1000次元空間には1000の独立な方向がある。たとえ各方向への摂動が微小でも、「悪意ある」方向を選べば決定境界を越えられる可能性がある。
+
+この解釈が正しいとすれば、敵対的サンプルへの対策は「決定境界の幾何学的性質を制御すること」に帰着する。マージンを大きくする（第5回）、決定境界の曲率を制御する、などのアプローチが考えられる。
+
+---
+
+## 5. スパース性の幾何学：Mixture of Expertsの世界
+
+高次元空間の「ほとんどが空」という性質は、呪いではなく**設計原理**として活用できる。Mixture of Experts（MoE）は、この原理の実践例である。
+
+### 5.1 MoEの基本構造
+
+MoEは、複数の「専門家」（Expert）ネットワークを用意し、入力に応じて一部の専門家だけを活性化する（スパース活性化）アーキテクチャである。
+
+```
+入力 → ルーター → [Expert 1, Expert 2, ..., Expert N] → 重み付き和 → 出力
+              ↑
+        「どのExpertを使うか」を決定
+```
+
+例えば、8つのExpertのうち2つだけを活性化する場合、計算量は約1/4に抑えられる一方、パラメータ総数は8倍近くになる。これにより「容量は大きいが計算は軽い」モデルが実現する。
+
+### 5.2 ルーティングの幾何学：kNNとの類似性
+
+ルーター（どのExpertを使うかを決める機構）は、しばしば以下のように実装される：
+
+$$\text{router}(\mathbf{x}) = \text{TopK}(\text{softmax}(\mathbf{W}_r \mathbf{x}))$$
+
+ここで $\mathbf{W}_r$ の各行は、各Expertの「重心」または「ゲートベクトル」と解釈できる。すると、ルーティングは本質的に「入力ベクトルに最も近いExpertを選ぶ」というkNN的な操作になる。
+
+この視点から見ると、MoEのルーターは「学習されたANN構造」とも言える。各Expertが高次元空間の部分領域を担当し、入力に応じて適切な部分領域へ「ルーティング」される。
+
+### 5.3 各Expertは「部分空間」を担当する（仮説）
+
+MoEの幾何学的解釈として、各Expertが高次元空間の異なる部分空間を担当しているという仮説がある：
+
+- **Expert A:** 数学的推論に関連する部分空間
+- **Expert B:** 言語的ニュアンスに関連する部分空間
+- **Expert C:** コード生成に関連する部分空間
+
+第2回で見たように、高次元ではランダムベクトルはほぼ直交する。もし各Expertの担当領域が互いにほぼ直交していれば、Expert間の干渉が少なく、専門性が保たれる。
+
+**経験的観察として、学習が進むと、Expert間の重みベクトルの類似度が下がる傾向が報告されている。** これは、各Expertが自然と「棲み分け」を行っていることを示唆する。ただし、これが「直交部分空間への分離」と厳密に対応するかは、研究途上である。
+
+### 5.4 MoEの課題と幾何学的理解
+
+#### Expert Collapse（専門家崩壊）
+
+MoEの主要な課題は、一部のExpertに負荷が集中し、他のExpertが使われなくなる現象である。これを幾何学的に解釈すると、表現空間が一部の部分空間に「縮退」し、次元崩壊の変種が起きていると考えられる。
+
+対策として**Load Balancing Loss**が用いられる：
+
+$$\mathcal{L}_{\text{balance}} = \alpha \cdot n \cdot \sum_i f_i \cdot p_i$$
+
+- $f_i$ : Expert $i$ に割り当てられたトークンの割合
+- $p_i$ : Expert $i$ へのルーティング確率の平均
+
+この損失項は、各Expertへのルーティングを均等化するよう促す。幾何学的には、**球面上の均等分布を促す正則化**と解釈できる。
+
+#### Shared Expert：共通部分空間の導入
+
+完全に独立なExpertでは、共通知識が重複して非効率になる。そこで、全入力に対して常に活性化する「Shared Expert」を導入する手法がある。
+
+幾何学的には、これは「共通部分空間 + 専門部分空間」の階層構造を明示的に設計することに相当する。DeepSeek-MoEなどがこのアプローチを採用している。
+
+### 5.5 MoEとMulti-head Attentionの対比
+
+MoEと第6回で扱うMulti-head Attentionは、ともに「部分空間への分割」というアイデアを共有している。しかし、その性質は異なる：
+
+| 機構 | 分割の単位 | 選択方式 | 幾何学的解釈 |
+|------|-----------|----------|-------------|
+| Multi-head Attention | 表現次元 | 常に全ヘッド活性化 | 部分空間への同時射影 |
+| MoE | ネットワーク全体 | 動的に選択 | 部分空間への条件付き射影 |
+
+Multi-headは「常にすべての視点から見る」のに対し、MoEは「状況に応じた視点を選ぶ」。後者はスパースであり、計算効率が高い。
+
+### 5.6 最新動向（2024-2025年）
+
+※以下は急速に発展中の分野であり、2026年2月時点の代表例である。
+
+**MoEアーキテクチャの発展：**
+
+- **Mixtral** (Mistral AI): 8 Experts, Top-2 routing
+- **Switch Transformer** (Google): Top-1 routing でさらにスパース化
+- **DeepSeek-MoE / DeepSeek-V3**: 細粒度Expert + 共有Expert、コスト効率の高いスケーリング
+- **Soft MoE**: 離散的ルーティングを連続化（第4回補論との接続）
+- **Llama 4**: MoEを採用（ただしLlama 3はdense）
+
+**非ユークリッド幾何学との融合：**
+
+- **Hyperbolic LLMs** (2025): 双曲空間でのLLM表現学習
+- **HypLoRA** (Yang et al., 2024): 双曲多様体でのLoRA適用
+- **Spectro-Riemannian GNNs** (ICLR 2025): 異なる曲率を組み合わせたグラフニューラルネット
+
+※MoE vs Denseの選択は、モデル規模・用途・推論環境により異なる。MoEが「唯一の主流」というわけではない。
+
+---
+
+## 6. アライメント問題の幾何学的定式化（比喩）
+
+高次元空間の性質は、AIアライメント問題にも示唆を与える。以下は厳密な定式化ではなく、思考のための比喩である。
+
+人間の価値観が定める「望ましい行動」の集合を、高次元空間内の部分多様体と考えよう。同様に、AIが目的関数を最適化した結果たどり着く行動の集合も、別の部分多様体である。
+
+問題は、高次元空間ではこの2つの多様体が予期せぬ形で乖離しうることだ。低次元の射影（人間が観測できる範囲）では重なって見えても、高次元では大きく離れている可能性がある。
+
+**MoEとの接続：** 「倫理Expert」を明示的に設け、常に活性化させることは可能か？これは技術的には実装可能だが、何を「倫理」として学習させるかという根本的な問題は残る。
+
+---
+
+## 7. 未解決問題
+
+本講義で扱った内容は、多くの未解決問題を含んでいる：
+
+1. **理解可能性の限界:** 高次元多様体の「全体像」を人間は理解できるのか？私たちの3次元的直感は、どこまで信頼できるのか？
+
+2. **説明可能性の幾何学:** 「このモデルがなぜこの予測をしたか」を説明することは、幾何学的に何を意味するのか？高次元空間での「経路」や「近さ」を、人間に伝達可能な形で表現できるか？
+
+3. **Expertの解釈可能性:** MoEの各Expertは「何を学んだか」を解釈できるのか？部分空間の意味論的ラベル付けは可能か？
+
+4. **敵対的ロバスト性と幾何学:** 敵対的サンプルに強いモデルの決定境界は、どのような幾何学的性質を持つべきか？
+
+---
 
 ## 警告
 
-幾何学は中立的な道具だが、その形状は価値観を埋め込む
+> 幾何学は中立的な道具だが、その形状は価値観を埋め込む
+
+表現空間の設計は、技術的選択であると同時に、価値判断でもある。何を「近い」と定義し、何を「直交」と見なすかは、最終的に人間の判断である。
+
+---
 
 ## 実装ノート
 
-- 敵対的サンプル（概念例）: `x_adv = x + epsilon * sign(grad)`
-- MoE（概念例、Hugging Face transformers）:
+### 敵対的サンプルの生成（FGSM）
 
 ```python
-from transformers import MixtralForCausalLM
-model = MixtralForCausalLM.from_pretrained("mistralai/Mixtral-8x7B-v0.1")
+import torch
+
+def fgsm_attack(model, x, y, epsilon=0.01):
+    """Fast Gradient Sign Method による敵対的サンプル生成"""
+    x.requires_grad = True
+    output = model(x)
+    loss = torch.nn.functional.cross_entropy(output, y)
+    loss.backward()
+    
+    # 勾配の符号方向に摂動
+    x_adv = x + epsilon * x.grad.sign()
+    return x_adv.detach()
 ```
 
-- Expert活性化パターンの可視化：ルーター出力をヒートマップ化
+### MoEモデルの利用例（Hugging Face transformers）
+
+```python
+from transformers import MixtralForCausalLM, AutoTokenizer
+
+# Mixtral-8x7B のロード
+model = MixtralForCausalLM.from_pretrained(
+    "mistralai/Mixtral-8x7B-v0.1",
+    torch_dtype=torch.float16,
+    device_map="auto"
+)
+tokenizer = AutoTokenizer.from_pretrained("mistralai/Mixtral-8x7B-v0.1")
+```
+
+### Expert活性化パターンの可視化
+
+```python
+import matplotlib.pyplot as plt
+import numpy as np
+
+def visualize_expert_activation(router_logits, top_k=2):
+    """ルーター出力をヒートマップとして可視化"""
+    # router_logits: [batch_size, num_experts]
+    probs = torch.softmax(router_logits, dim=-1).detach().cpu().numpy()
+    
+    plt.figure(figsize=(12, 4))
+    plt.imshow(probs, aspect='auto', cmap='viridis')
+    plt.xlabel('Expert Index')
+    plt.ylabel('Token Index')
+    plt.colorbar(label='Routing Probability')
+    plt.title(f'Expert Activation Pattern (Top-{top_k} routing)')
+    plt.show()
+```
+
+### コサイン類似度ベースのkNN
+
+```python
+from sklearn.neighbors import NearestNeighbors
+from sklearn.preprocessing import normalize
+
+def cosine_knn(X_train, X_query, k=5):
+    """コサイン類似度ベースのk近傍探索"""
+    # L2正規化により、ユークリッド距離 ≈ コサイン距離
+    X_train_norm = normalize(X_train)
+    X_query_norm = normalize(X_query)
+    
+    nn = NearestNeighbors(n_neighbors=k, metric='cosine')
+    nn.fit(X_train_norm)
+    distances, indices = nn.kneighbors(X_query_norm)
+    return distances, indices
+```
+
+---
+
+## 次回予告
+
+第14回では、「形」ではなく「構造」を測る視点として**トポロジー**を導入する。高次元空間の「穴」や「ループ」といった位相的特徴は、次元削減しても保存されうる不変量である。Topological Data Analysis（TDA）が表現学習に与える示唆を整理する。
