--- a/series/13.md
+++ b/series/13.md
@@ -117,7 +117,7 @@ $$\|\mathbf{u} - \mathbf{v}\|^2 = 2(1 - \mathbf{u}^\top \mathbf{v})$$
 代表的な手法とその幾何学的アイデアを整理しよう：
 
 | 手法 | 幾何学的アイデア | 参考文献 |
-|------|------------------|----------|
+| ------ | ------------------ | ---------- |
 | **LSH** (Locality Sensitive Hashing) | ランダム射影で空間を分割し、近い点が同じバケットに入る確率を高める | Indyk & Motwani, "Approximate Nearest Neighbors: Towards Removing the Curse of Dimensionality" (STOC 1998) |
 | **Product Quantization** | 高次元空間を低次元部分空間の直積に分解し、各部分空間で量子化 | Jégou et al. (IEEE TPAMI 2011) |
 | **HNSW** (Hierarchical Navigable Small World) | 階層的なグラフ構造で「近道」を作り、効率的に探索 | Malkov & Yashunin (arXiv 2016 / IEEE TPAMI 2020) |
@@ -166,7 +166,7 @@ $$\mathbf{x}_{\text{adv}} = \mathbf{x} + \epsilon \cdot \text{sign}(\nabla_{\mat
 
 MoEは、複数の「専門家」（Expert）ネットワークを用意し、入力に応じて一部の専門家だけを活性化する（スパース活性化）アーキテクチャである。
 
-```
+```text
 入力 → ルーター → [Expert 1, Expert 2, ..., Expert N] → 重み付き和 → 出力
               ↑
         「どのExpertを使うか」を決定
@@ -227,7 +227,7 @@ $$\mathcal{L}_{\text{balance}} = \alpha \cdot n \cdot \sum_i f_i \cdot p_i$$
 MoEと第6回で扱うMulti-head Attentionは、ともに「部分空間への分割」というアイデアを共有している。しかし、その性質は異なる：
 
 | 機構 | 分割の単位 | 選択方式 | 幾何学的解釈 |
-|------|-----------|----------|-------------|
+| ------ | ----------- | ---------- | ------------- |
 | Multi-head Attention | 表現次元 | 常に全ヘッド活性化 | 部分空間への同時射影 |
 | MoE | ネットワーク全体 | 動的に選択 | 部分空間への条件付き射影 |
 
