--- a/series/13.md
+++ b/series/13.md
@@ -25,7 +25,7 @@
 > [!NOTE]
 > 高次元空間でランダムに2つのベクトルを選ぶと、それらはほぼ確実に直交に近い。
 
-これは数学的に証明できる事実である。 $d$ 次元単位球面上で**一様ランダム**に選んだ2つのベクトル $\mathbf{u}, \mathbf{v}$ の内積 $\langle \mathbf{u}, \mathbf{v} \rangle$ は、 $d \to \infty$ で平均0、分散 $1/d$ に集中する。
+これは数学的に証明できる事実である。 $d$ 次元単位球面上で**一様ランダム**に選んだ2つのベクトル $\mathbf{u}, \mathbf{v}$ の内積 $\langle \mathbf{u}, \mathbf{v} \rangle$ は、 $$d \to \infty$$ で平均0、分散 $1/d$ に集中する。
 
 この性質は**表現力の源泉**となる。なぜなら、互いにほぼ直交する多数のベクトルを「詰め込む」ことができるからだ。高次元空間には、互いの内積が小さい（例えば絶対値0.1以下）ベクトルを**指数的に多く**配置できることが知られている。これが、大規模言語モデルが膨大な語彙やコンセプトを区別できる理由の一つである。
 
